# stairs

./: .gitignore  Dockerfile
client/: .env.demo  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx  AppConfig.ts  constants.ts  global.css  main.tsx  schema.ts  store.ts  types.ts
client/src/assets/: global.css
client/src/components/: DesignIcon.tsx  Header.tsx
client/src/components/form/: Form.tsx  FormInput.tsx  FormToggleGroup.tsx  TreadsToggle.tsx  hooks.tsx
client/src/components/ui/: index.ts  sheet.tsx
client/src/features/: SessionToggles.tsx  TargetCounter.tsx
client/src/features/assemblyForm/: Form.tsx  hooks.ts  schema.ts
client/src/features/devTools/: DevToolsDialog.tsx  ViewStorage.tsx  useSeedEntries.ts
client/src/features/form/: Form.tsx  constants.ts  hooks.ts  schema.ts
client/src/features/history/: History.tsx  HistorySection.tsx
client/src/features/settings/: ClearHistoryConfirm.tsx  SettingsButton.tsx  (+1 more)
client/src/hooks/: useVisibilityClearHistoryCheck.ts
client/src/store/: hooks.ts  index.ts  operatorSlice.ts  sessionSlice.ts  store.ts
client/src/utils/: DarkModeSync.tsx  clearHistoryCheck.ts  formInputNumber.ts  formatTime.ts  index.ts  viewTransition.ts
server/: .gitignore  Cargo.toml  Dockerfile
server/ec2-user@3.8.16.97/: .dockerignore
server/ec2-user@3.8.16.97/src/: config.rs  main.rs  utils.rs
server/src/: config.rs  logging.rs  main.rs  utils.rs
server/src/middleware/: logging.rs  mod.rs  protection.rs  rate_limit.rs
server/src/routes/: health.rs
(+15 files in other folders)
