[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version= "0.6.6", features = ["trace", "fs", "limit", "timeout"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
